# Titan

./: .cursorignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  LICENSE  __init__.py  main.py  pyproject.toml  readme.md  setup.cfg
algorithm/: __init__.py  config.py  main.py  math.md
algorithm/mathA/: __init__.py  main.py  params.py
algorithm/mathB/: main.py  params.py
algorithm/mathC/: __init__.py  main.py  main_.py  params.py
config/: __init__.py  algorithm.py  cache.py  mq.py  proxy.py  request.py  task.py
decorators/: __init__.py  cache.py  class_.py  logs.py  request.py  save.py  security.py  timer.py  validate.py
deploy/: pip.conf
logic/: __init__.py  config.py  log_test.py  readme.md  setting.py  utils.py
middleware/: __init__.py  cache.py  discharge.py  message.py  readme.md  request.py  security.py
proxy/: main.py  readme.md
proxy/client/: request.py  websocket.py
proxy/config/: __init__.py  files.py  logs.py
proxy/custom/: __init__.py  file.py  http.py  wss.py
proxy/page/: home.html
proxy/server/: __init__.py  base.py  base_update.py  file.py  handler.py  http.py  proxy.py  stream.py  ws.py
proxy/utils/: __init__.py  files.py  math_algo.py  music.py  videos.py
record/: __init__.py  base.py  dataclass_order.py  decorators.py  mateclass_.py  my_test.py
server/: __init__.py  readme.md
utils/: __init__.py  all.py  attr_study.py  createMate.py  dataclassOrder.py  math_algo.py  readme.md  system.py
workspace/: __init__.py  celery_example.py  my_math.py  scheduler.py
(+11 files in other folders)
