[project]
name = "titan"
version = "0.1.0"
description = ""
authors = [
    {name = "PySuper",email = "small.spider.p@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.5.3,<1.0.0)",
    "poetry-core (>=2.0.0,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "tornado (>=6.4.2,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
